InternexDev_Sandbox/src/objects/WF_WP_Transactions__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <label>Batch</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Account_Number__c</fullName>
        <label>Check Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Amount__c</fullName>
        <label>Check Amount</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Date__c</fullName>
        <label>Check Date</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_RTN__c</fullName>
        <label>Check RTN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Data__c</fullName>
        <label>Custom Data</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepositDate_LockboxNo_Batch_Transaction__c</fullName>
        <formula>Deposit_date__c + Lockbox_no__c + Batch__c + Transaction_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DepositDate LockboxNo Batch Transaction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_date__c</fullName>
        <label>Deposit date</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depository_Account__c</fullName>
        <label>Depository Account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Front_image_file__c</fullName>
        <label>Front image file</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_amount__c</fullName>
        <label>Invoice amount</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lockbox_no__c</fullName>
        <label>Lockbox no</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_string_for_Image_mapping__c</fullName>
        <formula>Deposit_date__c + Lockbox_no__c+Batch__c+TEXT(VALUE(Transaction_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matching string for Image mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rear_Image_File__c</fullName>
        <label>Rear Image File</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remitter_Name__c</fullName>
        <label>Remitter Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_ID__c</fullName>
        <label>Site ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Number__c</fullName>
        <label>Transaction Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Envelope__c</fullName>
        <label>WF Envelope</label>
        <referenceTo>WF_Envelope__c</referenceTo>
        <relationshipLabel>WF WP Transactions</relationshipLabel>
        <relationshipName>WF_WP_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>WF WP Transactions</label>
    <nameField>
        <displayFormat>WFWT-{00000}</displayFormat>
        <label>WF WP Transactions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF WP Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>